--- a/bin/requirements.txt
+++ b/bin/requirements.txt
@@ -1,6 +1,8 @@
 # Core dependencies
 mutagen>=1.45.0
 Pillow>=9.0.0
+cryptography>=3.4.8
+requests>=2.25.1
 
 # Optional dependencies for enhanced functionality
 # These are not strictly required but provide better metadata extraction
